<resources>
    <string name="app_name">TutoriaUN</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_configuración">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="tutorIngenio">Tutorias con Ingenio</string>
    <string name="correoCampo">Correo Electrónico</string>
    <string name="correoContrasena">Contraseña</string>
    <string name="botonIniciar">Iniciar Sesión</string>
    <string name="botonRegistrar">Registrarse</string>
    <string name="campoNombre">Nombre</string>
    <string name="campoID">N° de Identificación</string>
    <string name="regsText">Ingresa tus datos a continuación</string>
    <string name="title_activity_tutorus_tutoria">Inicio - TutoriaUN</string>
    <string name="yourTutories"><u>Tus tutorías</u></string>
    <string name="tutoryLoading">Cargando tutorías...</string>
    <string name="tutoryNone">No tienes tutorías</string>
    <string name="tutorySuggest">¡A descansar!</string>
    <string name="forget">¿Olvidaste tu contraseña? Haz <u>click aquí</u> para recuperarla</string>

    <string-array name="dias">
        <item>Lunes</item>
        <item>Martes</item>
        <item>Miércoles</item>
        <item>Jueves</item>
        <item>Viernes</item>
    </string-array>

    <string-array name="perfiles">
        <item>Fundamentos de Física</item>
        <item>Programación</item>
        <item>Circuitos, Señales y Control</item>
        <item>Química</item>
        <item>Termodinámica y Transferencia de Calor y Masa</item>
        <item>Hidráulica y Manejo de Aguas</item>
        <item>Dinámica, Estática y Dibujo Básico</item>
        <item>Matemáticas</item>
    </string-array>

    <string name="perfilText">Perfil Educativo</string>
    <string name="asignaturaText">Asignatura</string>
    <string name="diaText">Fecha</string>
    <string name="horaText">Hora</string>
    <string name="time">hh</string>
    <string name="date">dd/mm/aaaa</string>
    <string name="asistencia">Recordatorio</string>
    <string name="wait">Por favor espera...</string>
    <string name="saveCuenta">Guardar cambios</string>
    <string name="CuentaChanges">Si hizo algún cambio recuerde guardar cambios</string>
    <string name="connectError">Error al conectar</string>
    <string name="errorTutorMessage">Ha ocurrido un error al buscar las tutorías</string>
</resources>
