<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".insertData">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="141dp"
        android:layout_height="134dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="TODO"
        android:tint="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:srcCompat="@drawable/ic_card" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:text="@string/regsText"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100000024" />

    <EditText
        android:id="@+id/idCampoReg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/campoID"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="@+id/nombreCampoReg"
        app:layout_constraintStart_toStartOf="@+id/nombreCampoReg"
        app:layout_constraintTop_toBottomOf="@+id/nombreCampoReg" />

    <EditText
        android:id="@+id/nombreCampoReg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="128dp"
        android:layout_marginRight="128dp"
        android:ems="10"
        android:hint="@string/campoNombre"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32" />

    <EditText
        android:id="@+id/correoCampoReg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/correoCampo"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/idCampoReg"
        app:layout_constraintStart_toStartOf="@+id/idCampoReg"
        app:layout_constraintTop_toBottomOf="@+id/idCampoReg" />

    <EditText
        android:id="@+id/passCampoReg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/correoContrasena"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/correoCampoReg"
        app:layout_constraintStart_toStartOf="@+id/correoCampoReg"
        app:layout_constraintTop_toBottomOf="@+id/correoCampoReg" />

    <Button
        android:id="@+id/button"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="goRegister"
        android:text="@string/botonRegistrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passCampoReg"
        app:layout_constraintVertical_bias="0.19999999" />
</androidx.constraintlayout.widget.ConstraintLayout>